--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,46 @@
 body {
     font-family: 'Virgil', sans-serif;
 }
+
+.title {
+    background-color: antiquewhite;
+    padding: 1em 0;
+    margin: 0;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.5em;
+
+}
+
+
+.wavy-curve {
+    display: block;
+    width: 100%;
+    height: 1px;
+
+  }
+
+  .custom-shape-divider-top-1717276612 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.custom-shape-divider-top-1717276612 svg {
+    position: relative;
+    display: block;
+    width: calc(269% + 1.3px);
+    height: 343px;
+}
+
+.custom-shape-divider-top-1717276612 .shape-fill {
+    fill: #9E0861;
+}
+
+.autocomplete-container {
+    text-align: center;
+    margin: 20px;
+  }
