--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,23 @@ body {
     text-align: center;
     margin: 20px;
   }
+
+/* .webcam_image_div{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+} */
+
+.webcam_image_div {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px; /* Adjust the gap as needed */
+    width: 50%;
+    background-color: antiquewhite;
+    padding: 1em;
+    border-radius: 10px;
+}
+.webcam_image_div img {
+    width: 100%;
+    border-radius: 10px;
+    /* height: auto; */
+}
