--- a/styles.css
+++ b/styles.css
@@ -84,14 +84,13 @@ body {
 }
 
 .weather_readings{
-    width: 50%;
     border-radius: 10px;
     background-color: antiquewhite;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     padding: 1em;
     gap: 2em;
-    
+
 }
 
 .weather_info{
@@ -104,4 +103,13 @@ body {
     border-radius: 10px;
     padding: 1em;
     background-color: #f3f3f3;
+    display:grid;
+    place-items: center;
+    place-content: center;
+}
+
+.weather_values{
+    border-radius: 10px;
+    background-color: antiquewhite;
+    padding: 1em;
 }
