--- a/styles.css
+++ b/styles.css
@@ -113,3 +113,53 @@ body {
     background-color: antiquewhite;
     padding: 1em;
 }
+
+
+/* Modal styles */
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.9); 
+  }
+  
+  .modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+  }
+  
+  .close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+
+  .webcam-img {
+    transition: transform 0.2s ease-in-out;
+  }
+  
+  .webcam-img:hover {
+    transform: scale(1.05); /* Increase size on hover */
+    cursor: pointer; /* Change cursor to pointer */
+  }
+  
